--- a/app/components/sources/sources.styl
+++ b/app/components/sources/sources.styl
@@ -1,7 +1,13 @@
 sources {
+
+  display: inline-block
+  height: 100%
+  width: 100%
+
   .sources-main {
     width: 100%
     height: 100%
+    padding-bottom: 3em
 
     .sources-left {
       display: inline-block
